Fix: Fix some bugs and upgrade packages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,31 +1,87 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+@plugin "flowbite/plugin";
+@source "../node_modules/flowbite";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-light-periwinkle: #eef2ff;
+  --color-vibrant-blue: #3c59fc;
+  --color-royal-blue: #1d4eff;
+  --color-deep-charcoal: #161616;
+  --color-neutral-gray: #616161;
+  --color-soft-silver: #dfdfdf;
+  --color-royal-purple: #531889;
+  --color-muted-gray: #aaa;
+  --color-soft-alabaster: #f6f7fb;
+  --color-dark-smoke: #313131;
+  --color-lavender-blue: #6366f1;
+  --color-raisin-black: #352b2b;
+
+  --height-0_5: 0.125rem;
+
+  --background-image-hero: radial-gradient(120% 210% at 95% 0px, #531889 10%, #000 70%);
+  --background-image-category-card: linear-gradient(243deg, #f3f5f8, #e7ebf1);
+
+  --container-1170: 1170px;
+
+  --breakpoint-xs: 445px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-    'Helvetica Neue', sans-serif;
-}
-* {
-  outline: none;
+@utility text-balance {
+  text-wrap: balance;
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  :root {
+    --background: #ffffff;
+    --foreground: #171717;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --background: #0a0a0a;
+      --foreground: #ededed;
+    }
+  }
+
+  body {
+    color: var(--foreground);
+    background: var(--background);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+      'Helvetica Neue', sans-serif;
+  }
+  * {
+    outline: none;
+  }
+
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
   }
 }
